[package]
name = "calf-vec"
version = "0.4.0-beta"
authors = ["Timothée Haudebourg <author@haudebourg.net>"]
edition = "2018"
categories = ["data-structures"]
keywords = ["vector", "stack", "vec", "small", "cow"]
description = "Small copy-on-write arrays, essentially combining `SmallVec` and `Cow`"
repository = "https://github.com/timothee-haudebourg/calf-vec"
documentation = "https://docs.rs/calf-vec"
license = "MIT/Apache-2.0"
readme = "README.md"
